// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledMarker should have correct default styles 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  top: 10px;
  left: 5px;
  background: rgb(216,216,216);
  width: 19px;
  height: 19px;
  border-radius: 3px;
  border: solid 1px rgb(173,173,173);
  cursor: pointer;
  z-index: 700;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`StyledMarker should have correct styles when in edit state 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  top: 10px;
  left: 5px;
  background: rgb(216,216,216);
  width: 19px;
  height: 19px;
  border-radius: 3px;
  border: solid 1px rgb(173,173,173);
  cursor: pointer;
  z-index: 900;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`StyledMarker should have correct styles when in open state 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  top: 10px;
  left: 5px;
  background: rgb(216,216,216);
  width: 19px;
  height: 19px;
  border-radius: 3px;
  border: solid 1px rgb(173,173,173);
  cursor: pointer;
  z-index: 800;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
